@@ -4,6 +4,7 @@ SecureServ Module for NeoStats Changelog.
  - Fixed incorrect parameters to printf style functions (M)
  - Remove unused MODE_ defines. If needed they should be in the core anyway (M)
  - Made startup messages obey verbose setting (M)
+ - Use more appropriate defines for buffer sizes since MAXHOST differs between IRCds (M)
 
 1.0 - Fish (F) and Mark (M) - 22 Aug, 2003
  - Fixed a problem with users signing off while NeoStats was still booting. (F)
